static code analysis cleanups
git-svn-id: svn+ssh://dev.eclipse.org/svnroot/rt/org.eclipse.jetty/jetty/trunk@411 7e9141cc-0065-0410-87d8-b60c137991c4